--- a/hmmer/templates/tree.html
+++ b/hmmer/templates/tree.html
@@ -1,34 +1,34 @@
 {% load custom_filters %}
 
 <div id="tab_container">
-    <table cellspacing="0" cellpadding="10px"> <tbody>
-            <th>sample</th>
-            {% for header in all_headers %}
-            <th>{{header}}</th> 
-            {% endfor %}
-            <th><a href="{% url "dlDetailed" id %}">Detailed Count</a></th>
 
-            {% for dir in dirs %}
-            <tr class="{% cycle '' 'altrow' %}">
-                <td>{{ dir }}</td>
+    <div id="multiAccordion2">
+        <h3><a href="#">tab 1</a></h3>
+        <div>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </div>
+        <h3><a href="#">tab 2</a></h3>
+        <div>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut eu mauris nulla, at cursus nulla. Morbi venenatis, risus sit amet ultricies pharetra, lorem purus tempor risus, vel tincidunt lectus nisi sit amet neque. Aenean sit amet nibh orci, a gravida eros. Pellentesque dignissim, libero eu congue semper, mauris metus molestie nisi, vitae posuere felis leo ac lectus. Mauris a nisi eget sapien varius eleifend vel vel nibh. In placerat commodo blandit. Vivamus sagittis ante sed nisl sodales id luctus diam dapibus. Proin a felis tristique nulla rhoncus sollicitudin. Nullam sit amet neque augue. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Fusce at nisi sapien.
+        </div>
+        <h3><a href="#">tab 3</a></h3>
+        <div>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </div>
+        <h3><a href="#">tab 4</a></h3>
+        <div>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut eu mauris nulla, at cursus nulla. Morbi venenatis, risus sit amet ultricies pharetra, lorem purus tempor risus, vel tincidunt lectus nisi sit amet neque. Aenean sit amet nibh orci, a gravida eros. Pellentesque dignissim, libero eu congue semper, mauris metus molestie nisi, vitae posuere felis leo ac lectus. Mauris a nisi eget sapien varius eleifend vel vel nibh. In placerat commodo blandit. Vivamus sagittis ante sed nisl sodales id luctus diam dapibus. Proin a felis tristique nulla rhoncus sollicitudin. Nullam sit amet neque augue. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Fusce at nisi sapien.
+        </div>
+    </div>
 
-                {% for key in all_headers %}
-                <td>{{all_counts|dictvalue:dir|dictvalue:key}}%</td>
-                {% endfor %}
-                <td>
-                    <button id="opener">open the dialog</button>
-                    <a class="link" href="{% url 'chart' id dir  %}">View Chart</a>
-                    <div class="display" ></div>
-
-                </td>
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table>
-
-    <script type="text/javascript" src="{{ STATIC_URL }}js/jquery-ui-1.10.3/jquery-1.9.1.js"></script>
-    <script type="text/javascript" src="{{ STATIC_URL }}js/jquery-ui-1.10.3/ui/jquery-ui.js"></script>
 
     <script type="text/javascript">
+        $(function() {
+                $('#multiAccordion2').multiAccordion({
+                    active: [1,2]
+                });
+                $('#multiAccordion2').multiAccordion("option", "active", [0, 3]);
+        });
     </script>
+
 </div>
