--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,7 @@
         
         <script type="text/javascript" src="{{ STATIC_URL }}js/jquery-ui-1.10.3/jquery-1.9.1.js"></script>
         <script type="text/javascript" src="{{ STATIC_URL }}js/jquery-ui-1.10.3/ui/jquery-ui.js"></script>
+        <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.multi-accordion-1.5.3.js""></script>
         <script type="text/javascript" src="http://www.google.com/jsapi"></script>
 
 
