--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
         <!--<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}js/jquery-ui-1.10.3/themes/smoothness/jquery-ui-1.10.3.custom.css">-->
-        <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/jquery-ui-1.10.3.custom.css">
+        <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/jquery/jquery-ui-1.10.3.custom.css">
         <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/cake.generic.css">
         <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/fancyBox/jquery.fancybox.css">
         
