--- a/hmmer/templates/chart.html
+++ b/hmmer/templates/chart.html
@@ -3,7 +3,7 @@
 
 <div id="chart_div_{{ site }}"></div>
 
-<script type="text/javascript" src="http://www.google.com/jsapi"></script>
+<!--<script type="text/javascript" src="http://www.google.com/jsapi"></script>-->
 
 <script type="text/javascript">
 
