--- a/hmmer/templates/clades.html
+++ b/hmmer/templates/clades.html
@@ -1,5 +1,10 @@
 {% load custom_filters %}
 
+<div class="download">
+    <a href="{% url "dlClades" id %}">
+        <img alt="" title="Download List" src="{{ STATIC_URL }}img/download-large.png">
+    </a>
+</div>
 
 <div id="tab_container">
     <table cellspacing="0" cellpadding="10px"> <tbody>
