--- a/hmmer/templates/subtypes.html
+++ b/hmmer/templates/subtypes.html
@@ -1,5 +1,11 @@
 {% load custom_filters %}
 
+<div class="download">
+    <a href="{% url "dlSubtypes" id %}">
+        <img alt="" title="Download List" src="{{ STATIC_URL }}img/download-large.png"> 
+    </a>
+</div>
+
 <div id="tab_container">
     {% if shortnew_counts %}
 
