--- a/hmmer/templates/multiples.html
+++ b/hmmer/templates/multiples.html
@@ -3,127 +3,137 @@
 <div class="download">
     <a href="{% url "dlMultiples" id %}">
         <img alt="" title="Download List" src="{{ STATIC_URL }}img/download-large.png"> 
-    </a>
-</div>
+        </a>
+    </div>
 
-<div id="tab_container">
+    <div id="tab_container">
 
-    <div id="multiAccordion">
-        {% for file in files %}
+        <div id="multiAccordion">
+            {% for file in files %}
 
-        <h3><a href="#">{{ file }}</a></h3>
-        <div>
+                <h3><a href="#">{{ file }}</a></h3>
+                <div>
 
-            <div style="text-align:left;padding-top:10px; padding-bottom:5px;font-weight:bold; border-width:1px;border-bottom-style:solid;font-size:1.2em;background-color:#FFFFFF;"><a href="#">Corrected</a></div>
-            {% for key,value in correctedTable.items %}
-            {% ifequal file key %}
-            {% if value.1 %} 
-            <table cellspacing="0" cellpadding="10px">
-                <tbody>
-                    {% for row in value.0 %}
-                    <tr class="{% cycle '' 'altrow' as alt %}">
-                        {% if forloop.first %}
-                        {% for header in  value.1 %}
-                        <th>{{ header }}</th>
-                        {% endfor %}
-                        </tr><tr class="{% cycle alt  %}">
-                        {% endif %}
+                    <div style="text-align:left;padding-top:10px; padding-bottom:5px;font-weight:bold; border-width:1px;border-bottom-style:solid;font-size:1.2em;background-color:#FFFFFF;"><a href="#">Corrected</a></div>
+                    {% for key,value in correctedTable.items %}
+                        {% ifequal file key %}
+                            {% if value.1 %} 
+                                <table cellspacing="0" cellpadding="10px">
+                                    <tbody>
+                                        {% for row in value.0 %}
+                                            <tr class="{% cycle '' 'altrow' as alt %}">
+                                                {% if forloop.first %}
+                                                    {% for header in  value.1 %}
+                                                        <th>{{ header }}</th>
+                                                    {% endfor %}
+                                                    <th>Sample Distribution</th>
+                                                    <th>Subtype Distribution</th>
+                                                </tr>
+                                                <tr class="{% cycle alt  %}">
+                                                {% endif %}
 
-                        {% for header in value.1 %}
-                        <td> {{ row| dictvalue:header }}  </td>
-                        {% endfor %}
-                    </tr>
+                                                {% for header in value.1 %}
+                                                    <td> {{ row| dictvalue:header }}  </td>
+                                                {% endfor %}
+                                                <td><div id="corrected_breakdown_{{ forloop.counter }}">breakdown</div></td>
+                                                <td><div id="corrected_subtypes_{{ forloop.counter }}">subtypes</div></td>
+                                            </tr>
+                                        {% endfor %}
+                                    </tbody>
+                                </table>
+                            {% else %}
+                                <p>No Data Available</p>
+                            {% endif %}
+                        {% endifequal %}
                     {% endfor %}
-                </tbody>
-            </table>
-            {% else %}
-            <p>No Data Available</p>
-            {% endif %}
-            {% endifequal %}
-            {% endfor %}
 
 
-            <div style="text-align:left;padding-top:10px; padding-bottom:5px;font-weight:bold; border-width:1px;border-bottom-style:solid;font-size:1.2em;background-color:#FFFFFF;"><a href="#">Resolved</a></div>
-            {% for key,value in resolvedTable.items %}
-            {% ifequal file key %}
-            {% if value.1 %} 
-            <table cellspacing="0" cellpadding="10px">
-                <tbody>
-                    {% for row in value.0 %}
-                    <tr class="{% cycle '' 'altrow' as alt %}">
-                        {% if forloop.first %}
-                        {% for header in  value.1 %}
-                        <th>{{ header }}</th>
-                        {% endfor %}
-                        </tr><tr class="{% cycle alt  %}">
-                        {% endif %}
+                    <div style="text-align:left;padding-top:10px; padding-bottom:5px;font-weight:bold; border-width:1px;border-bottom-style:solid;font-size:1.2em;background-color:#FFFFFF;"><a href="#">Resolved</a></div>
+                    {% for key,value in resolvedTable.items %}
+                        {% ifequal file key %}
+                            {% if value.1 %} 
+                                <table cellspacing="0" cellpadding="10px">
+                                    <tbody>
+                                        {% for row in value.0 %}
+                                            <tr class="{% cycle '' 'altrow' as alt %}">
+                                                {% if forloop.first %}
+                                                    {% for header in  value.1 %}
+                                                        <th>{{ header }}</th>
+                                                    {% endfor %}
+                                                    <th>Sample Distribution</th>
+                                                    <th>Subtype Distribution</th>
+                                                </tr>
+                                                <tr class="{% cycle alt  %}">
+                                                {% endif %}
 
-                        {% for header in value.1 %}
-                        <td> {{ row| dictvalue:header }}  </td>
-                        {% endfor %}
-                    </tr>
+                                                {% for header in value.1 %}
+                                                    <td> {{ row| dictvalue:header }}  </td>
+                                                {% endfor %}
+                                                <td><div id="resolved_breakdown_{{ forloop.counter }}">breakdown</div></td>
+                                                <td><div id="resolved_subtypes_{{ forloop.counter }}">subtypes</div></td>
+                                            </tr>
+                                        {% endfor %}
+                                    </tbody>
+                                </table>
+                            {% else %}
+                                <p>No Data Available</p>
+                            {% endif %}
+                        {% endifequal %}
                     {% endfor %}
-                </tbody>
-            </table>
-            {% else %}
-            <p>No Data Available</p>
-            {% endif %}
-            {% endifequal %}
+
+                </div>
             {% endfor %}
 
         </div>
-        {% endfor %}
-
-    </div>
 
 
-    <script type="text/javascript">
-        $(function() {
+        <script type="text/javascript">
+            $(function() {
                 $('#multiAccordion').multiAccordion({
-active: [
-{% for file in files %}
-{% for key,value in correctedTable.items %}
-{% ifequal file key  %}
-{% if value.1 %}
-{{ forloop.parentloop.counter0 }}
+                        active: [
+                            {% for file in files %}
+                            {% for key,value in correctedTable.items %}
+                            {% ifequal file key  %}
+                            {% if value.1 %}
+                            {{ forloop.parentloop.counter0 }}
 
-{% else %}
-{% for key2,value2 in resolvedTable.items %}
-{% ifequal file key2  %}
-{% if value2.1 %}
-{{ forloop.parentloop.parentloop.counter0 }}
-{% endif %}
-{% endifequal %}
-{% endfor %}
+                            {% else %}
+                            {% for key2,value2 in resolvedTable.items %}
+                            {% ifequal file key2  %}
+                            {% if value2.1 %}
+                            {{ forloop.parentloop.parentloop.counter0 }}
+                            {% endif %}
+                            {% endifequal %}
+                            {% endfor %}
 
-{% endif %}
-{% endifequal %}
-{% endfor %}
-{% endfor %}
+                            {% endif %}
+                            {% endifequal %}
+                            {% endfor %}
+                            {% endfor %}
                 ]
                 });
-$('#multiAccordion').multiAccordion("option", "active", [
-        {% for file in files %}
-        {% for key,value in correctedTable.items %}
-        {% ifequal file key  %}
-        {% if value.1 %}
-        {{ forloop.parentloop.counter0 }}
+                $('#multiAccordion').multiAccordion("option", "active", [
+                        {% for file in files %}
+                        {% for key,value in correctedTable.items %}
+                        {% ifequal file key  %}
+                        {% if value.1 %}
+                        {{ forloop.parentloop.counter0 }}
 
-        {% else %}
-        {% for key2,value2 in resolvedTable.items %}
-        {% ifequal file key2  %}
-        {% if value2.1 %}
-        {{ forloop.parentloop.parentloop.counter0 }}
-        {% endif %}
-        {% endifequal %}
-        {% endfor %}
+                        {% else %}
+                        {% for key2,value2 in resolvedTable.items %}
+                        {% ifequal file key2  %}
+                        {% if value2.1 %}
+                        {{ forloop.parentloop.parentloop.counter0 }}
+                        {% endif %}
+                        {% endifequal %}
+                        {% endfor %}
 
-        {% endif %}
-        {% endifequal %}
-        {% endfor %}                   
-        {% endfor %}
-        ]);
-});
-</script>
+                        {% endif %}
+                        {% endifequal %}
+                        {% endfor %}                   
+                        {% endfor %}
+                ]);
+            });
+        </script>
 
-</div>
+    </div>
