--- a/templates/base.html
+++ b/templates/base.html
@@ -3,56 +3,41 @@
 
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
-        <!--<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}js/jquery-ui-1.10.3/themes/smoothness/jquery-ui-1.10.3.custom.css">-->
-        <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/jquery/jquery-ui-1.10.3.custom.css">
-        <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/cake.generic.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/fancyBox/jquery.fancybox.css">
-        
-        <script type="text/javascript" src="{{ STATIC_URL }}js/jquery-1.9.1.js"></script>
-        <script type="text/javascript" src="{{ STATIC_URL }}js/jquery-ui.js"></script>
-        <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.multi-accordion-1.5.3.js"></script>
+        <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
+        <script src="http://code.jquery.com/jquery.min.js"></script>
+        <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
         <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.fancybox.pack.js"></script>
         <script type="text/javascript" src="http://www.google.com/jsapi"></script>
-              
-        <style type="text/css">
-            /*demo page css*/	
-            .demoHeaders { margin-top: 2em; }
-            #dialog_link {padding: .4em 1em .4em 20px;text-decoration: none;position: relative;}
-            #dialog_link span.ui-icon {margin: 0 5px 0 0;position: absolute;left: .2em;top: 50%;margin-top: -8px;}
-            ul#icons {margin: 0; padding: 0;}
-            ul#icons li {margin: 2px; position: relative; padding: 4px 0; cursor: pointer; float: left;  list-style: none;}
-            ul#icons span.ui-icon {float: left; margin: 0 4px;}
-        </style>
 
        {% block head %}{% endblock %}
     </head>
 
     <body>
-        <div id="container">
-            <div id="header">
-                <h1></h1>			
-                {% block header %}{% endblock %}
-            </div>	
-            <div id="header-url-panel">
-                <ul>
-                    <li>website <span style="color: #00A4E4;"><a href="#">http://under.construction</a></span></li>
-                    <li>source code <span style="color: #00A4E4;"><a href="#">http://under.construction</a></span></li>
-                    <li>blog <span style="color: #00A4E4;"><a href="#">http://under.construction</a></span></li>
-                    <li>contact <span style="color: #00A4E4;"><a href="#">http://under.construction</a></span></li>
-                </ul>	
-            </div>		
 
-            <ul id="menu">			
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Search</a></li>
-                <li></li>
-                <li><a href="#">Documentation</a> </li>
-            </ul>	
-
-            {% block body %}{% endblock %}
-            {% block footer %}{% endblock %}
-        </div>
+        <!--[> Responsive navbar <]
+        <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                        [> Display three horizontal lines when navbar collapsed. <]
+                        <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#">SymTyper</a>
+                </div>
+                <div class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav">
+                        <li class="active"><a href="#">Home</a></li>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>-->
+        {% block navbar %}{%endblock %}
+        {% block body %}{% endblock %}
+        {% block footer %}{% endblock %}
 
     </body>
 
