--- a/hmmer/templates/upload.html
+++ b/hmmer/templates/upload.html
@@ -1,45 +1,65 @@
 {% extends "base.html" %}
+{% load widget_tweaks %}
 
 {% block head %}
-        <title>File Form</title>
+    <title>File Form</title>
+    <script type="text/javascript">
+        $(document)
+        .on('change', '.btn-file :file', function() {
+            var input = $(this),
+            numFiles = input.get(0).files ? input.get(0).files.length : 1,
+            label = input.val().replace(/\\/g, '/').replace(/.*\//, '');
+            input.trigger('fileselect', [numFiles, label]);
+            });
+            $(document).ready( function() {
+                $('.btn-file :file').on('fileselect', function(event, numFiles, label) {
+                    var input = $(this).parents('.input-group').find(':text'),
+                    log = numFiles > 1 ? numFiles + ' files selected' : label;
+                    if( input.length ) {
+                        input.val(log);
+                    } else {
+                        if( log ) alert(log);
+                    }
+                });
+            }); 
+    </script>
 {% endblock %}
 
 {% block body %}
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-4 col-sm-offset-4">
-                    <div class="well">
-                    <form role="form" enctype="multipart/form-data" method="post" action=".">
-                        <h3>SymTyper</h3>
-                        <label class="label" for="id_fasta_File">Fasta File:</label>
-                        {{ form.fasta_File }}
-                        <label class="label" for="id_sample_File">Id File:</label>
-                        {{ form.sample_File }}
-                        <input class="btn btn-primary" type="submit"/>
-                        {% csrf_token %}
-                    </form>
-                </div>
-                </div>
-            </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-4 col-sm-offset-4">
+                <form class="well"role="form" enctype="multipart/form-data" method="post" action=".">
+                    
+                    <div class="form-group">
+                        <label for="id_fasta_File">Fasta File:</label>
+                        <div class="input-group">
+                            <span class="input-group-btn">
+                                <span class="btn btn-primary btn-file">
+                                    Browse...
+                                    {{ form.fasta_File }}
+                                </span>
+                            </span>
+                            <input class="form-control" type="text" readonly="">
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="id_sample_File">Id File:</label>
+                        <div class="input-group">
+                            <span class="input-group-btn">
+                                <span class="btn btn-primary btn-file"> 
+                                    Browse...
+                                    {{ form.sample_File }}
+                                </span>
+                            </span>
+                            <input class="form-control" type="text" readonly="">
+                        </div>
+                    </div>
+                    <button class="btn btn-primary" type="submit">Submit</button>
+                    {% csrf_token %}
+            </form>
         </div>
+    </div>
 {% endblock %}
 
-<!--<br />-->
-<!--<br />-->
-<!--<div id="form-wrapper">-->
-<!--<fieldset class="form-wrapper">-->
-<!--<legend>SymTyper:</legend>-->
-
-<!--<form enctype="multipart/form-data" method="post" action=".">-->
-<!--<label class="label" for="id_fasta_File">Fasta File:</label>-->
-<!--{{ form.fasta_File }}-->
-
-<!--<label class="label" for="id_sample_File">Id File:</label>-->
-<!--{{ form.sample_File }}-->
-
-<!--<input type="submit" value="Submit"/>-->
-<!--{% csrf_token %}-->
-
-<!--</form>-->
-<!--</fieldset>-->
-<!--</div>-->
