--- a/hmmer/templates/subtypes.html
+++ b/hmmer/templates/subtypes.html
@@ -1,39 +1,57 @@
+{% extends "base.html" %}
 {% load custom_filters %}
 
-<div class="download">
-    <a href="{% url "dlSubtypes" id %}">
-        <img alt="" title="Download List" src="{{ STATIC_URL }}img/download-large.png"> 
-    </a>
-</div>
+{% block body %}
+<!--<div class="download">-->
+    <!--<a href="{% url "dlSubtypes" id %}">-->
+        <!--<img alt="" title="Download List" src="{{ STATIC_URL }}img/download-large.png"> -->
+    <!--</a>-->
+<!--</div>-->
+<div class="container">
+    <div class="row">
+        <div class="col-sm-12">
+            <a href="{% url "dlSubtypes" id %}">
+                <img alt="" title="Download List" src="{{ STATIC_URL }}img/download-large.png"> 
+            </a>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-12">
+            {% if shortnew_counts %}
 
-<div id="tab_container">
-    {% if shortnew_counts %}
+            <div style="text-align:left;padding-top:10px; padding-bottom:5px;font-weight:bold;font-size:1.2em;background-color:#FFFFFF;"><a href="{% url "dlShortnew" id  %}">Short New Subtypes</a></div>
+            <div id="flip-scroll">
+                <table class="table-bordered table-striped table-condensed cf">
+                    {% for row in shortnew_counts %}
+                    {% if forloop.first %}
+                    <thead>
+                        <tr>
+                            {% for header in shortnew_headers %}
+                            <th>{{ header }}</th>
+                            {% endfor %}
+                        </tr>
+                    </thead>
 
-    <div style="text-align:left;padding-top:10px; padding-bottom:5px;font-weight:bold; border-width:1px;border-bottom-style:solid;font-size:1.2em;background-color:#FFFFFF;"><a href="{% url "dlShortnew" id  %}">Short New Subtypes</a></div>
-    <table cellspacing="0" cellpadding="10px">
-        <tbody>
-            {% for row in shortnew_counts %}
-            <tr class="{% cycle '' 'altrow' as alt %}">
-                {% if forloop.first %}
-                {% for header in shortnew_headers %}
-                <th>{{ header }}</th>
-                {% endfor %}
-                </tr><tr class="{% cycle alt  %}">
-                {% endif %}
-                {% for header in shortnew_headers %}
-                <td> {{ row | dictvalue:header }}</td>
-                {% endfor %}
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+                    <tbody>
+                        <tr class="{% cycle '' 'altrow' as alt  %}">
+                            {% endif %}
+                            {% for header in shortnew_headers %}
+                            <td> {{ row | dictvalue:header }}</td>
+                            {% endfor %}
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
 
-    {% endif %}
+            {% endif %}
 
+        </div>
+    </div>
     {% if unique_counts %}
 
     <div style="text-align:left;padding-top:10px; padding-bottom:5px;font-weight:bold; border-width:1px;border-bottom-style:solid;font-size:1.2em;background-color:#FFFFFF;"><a href="{% url "dlUnique" id %}">Unique Subtypes</a></div>
-    <table cellspacing="0" cellpadding="10px">
+    <table class="table table-condensed table-striped">
         <tbody>
             {% for row in unique_counts %}
             <tr class="{% cycle '' 'altrow' as alt %}">
@@ -50,13 +68,12 @@
             {% endfor %}
         </tbody>
     </table>
-
     {% endif %}
 
     {% if perfect_counts %}
 
     <div style="text-align:left;padding-top:10px; padding-bottom:5px;font-weight:bold; border-width:1px;border-bottom-style:solid;font-size:1.2em;background-color:#FFFFFF;"><a href="{% url "dlPerfect" id %}">Perfect Subtype</a>s</div>
-    <table cellspacing="0" cellpadding="10px">
+    <table class="table table-condensed table-striped">
         <tbody>
             {% for row in perfect_counts %}
             <tr class="{% cycle '' 'altrow' as alt %}">
@@ -76,3 +93,7 @@
 
     {% endif %}
 </div>
+    </div>
+</div>
+
+{% endblock %}
